DOCUMENT-209 : Correction of sonar issues
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/cms/plugin-document@48947 bab10101-e421-0410-a517-8ce0973de3ef